<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.scorecounter1.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background=" #7cb342 "
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingLeft="60dp"
                android:paddingRight="8dp"
                android:paddingStart="60dp"
                android:paddingTop="8dp"
                android:text="@string/team_A"
                android:textColor=" #1b5e20 "
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingLeft="90dp"
                android:paddingRight="8dp"
                android:paddingStart="90dp"
                android:paddingTop="8dp"
                android:text="@string/score_A"
                android:textColor=" #000000 "
                android:textSize="30sp" />

            <Button
                android:id="@+id/but11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:onClick="But11"
                android:text="@string/but11" />

            <Button
                android:id="@+id/but12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:onClick="But12"
                android:text="@string/but12" />

            <Button
                android:id="@+id/but13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:onClick="But13"
                android:text="@string/but13" />

            <Button
                android:id="@+id/but14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:onClick="But14"
                android:text="@string/but14" />

            <Button
                android:id="@+id/but16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:onClick="But16"
                android:text="@string/but16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background=" #7cb342 "
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingLeft="60dp"
                android:paddingRight="8dp"
                android:paddingStart="60dp"
                android:paddingTop="8dp"
                android:text="@string/team_B"
                android:textColor=" #1b5e20 "
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingEnd="8dp"
                android:paddingLeft="90dp"
                android:paddingRight="8dp"
                android:paddingStart="90dp"
                android:paddingTop="8dp"
                android:text="@string/score_B"
                android:textColor=" #000000 "
                android:textSize="30sp" />

            <Button
                android:id="@+id/but21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:onClick="But21"
                android:text="@string/but21" />

            <Button
                android:id="@+id/but22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:onClick="But22"
                android:text="@string/but22" />

            <Button
                android:id="@+id/but23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:onClick="But23"
                android:text="@string/but23" />

            <Button
                android:id="@+id/but24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:onClick="But24"
                android:text="@string/but24" />

            <Button
                android:id="@+id/but26"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:onClick="But26"
                android:text="@string/but26" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            android:id="@+id/reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="145dp"
            android:layout_marginVertical="40dp"
            android:onClick="Reset"
            android:text="@string/reset"
            tools:targetApi="o" />
    </LinearLayout>

</LinearLayout>
